# lc3b-rs

./: C_COMPILER_NOTES.md  Cargo.toml  LICENSE
.github/workflows/: github-pages.yml
examples/: demo_compile.rs
lc3b/: Cargo.toml
lc3b-assembler/src/: lc3b_asm.pest  lib.rs
lc3b-assembler/tests/: add.rs  and.rs  br.rs  directives.rs  jmp_ret.rs  jsr_jsrr.rs  ldb.rs  ldw.rs  lea.rs  not.rs  rti.rs  shf.rs  stb.rs  stw.rs  trap.rs  xor.rs
lc3b-c-ast/: Cargo.toml
lc3b-c-ast/src/: ast.rs  builder.rs  lib.rs
lc3b-c-compiler/: Cargo.toml
lc3b-c-compiler/src/: codegen.rs  headers.rs  lib.rs
lc3b-c-grammar/: Cargo.toml
lc3b-c-grammar/src/: c_grammar.pest  lib.rs
lc3b-isa/src/: instruction.rs  register.rs
lc3b-react/: package-lock.json  package.json  tailwind.config.js
lc3b-react/public/: index.html  manifest.json
lc3b-react/src/: About.tsx  Agent.tsx  AgentContext.tsx  App.tsx  Assembly.tsx  Computer.tsx  ConditionCodes.tsx  Console.tsx  DebugLog.tsx  Instructions.tsx  MemoryViewer.tsx  ProgramCounter.tsx  RegisterSet.tsx  SamplePrograms.tsx  StatusSection.tsx  ThemeContext.tsx  index.css  samples.ts  webgpu.d.ts
lc3b-web/: Cargo.toml  build.rs
lc3b-web/templates/: index.html  style.css
lc3b/src/: constants.rs  error.rs  lib.rs
lc3b/src/callbacks/: callback_registry.rs
lc3b/src/computer/: computer.rs
lc3b/src/io/: buffered.rs  mod.rs  stdio.rs
lc3b/src/memory/: debug.rs  mod.rs
lc3b/src/observer/: mod.rs  ui.rs
lc3b/src/program/: mod.rs
lc3b/src/wasm/: mod.rs
lc3b/tests/: computer_tests.rs
