[package]
name = "lc3b-c-compiler"
version = "0.1.0"
edition = "2021"
description = "C to LC-3B assembly compiler"
license = "MIT"

[dependencies]
lc3b-c-grammar = { version = "0.1", path = "../lc3b-c-grammar" }
lc3b-c-ast = { version = "0.1", path = "../lc3b-c-ast" }

[dev-dependencies]
lc3b-assembler = { version = "0.1", path = "../lc3b-assembler" }
