[package]
authors = ["Xavier Lange <xrlange@gmail.com>"]
name = "lc3b"
version = "0.1.5"
edition = "2021"
description = "LC3B computer emulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
anyhow = "1"
thiserror = "2"
lc3b-assembler = { version = "0", path = "../lc3b-assembler" }
lc3b-c-compiler = { version = "0.1", path = "../lc3b-c-compiler" }
lc3b-isa = { version = "0", path = "../lc3b-isa" }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
eyre = "0"
